[gd_scene load_steps=25 format=2]

[ext_resource path="res://object/Player.gd" type="Script" id=1]
[ext_resource path="res://sprite/effect/wing/wing1.png" type="Texture" id=2]
[ext_resource path="res://sprite/effect/wing/wing2.png" type="Texture" id=3]
[ext_resource path="res://sprite/effect/wing/wing3.png" type="Texture" id=4]
[ext_resource path="res://sprite/effect/wing/wing4.png" type="Texture" id=5]
[ext_resource path="res://sprite/player/player1.png" type="Texture" id=6]
[ext_resource path="res://sprite/player/player12.png" type="Texture" id=7]
[ext_resource path="res://sprite/player/player13.png" type="Texture" id=8]
[ext_resource path="res://sprite/player/player14.png" type="Texture" id=9]
[ext_resource path="res://sprite/player/player6.png" type="Texture" id=10]
[ext_resource path="res://sprite/player/player7.png" type="Texture" id=11]
[ext_resource path="res://sprite/player/player8.png" type="Texture" id=12]
[ext_resource path="res://sprite/player/player9.png" type="Texture" id=13]
[ext_resource path="res://sprite/player/player10.png" type="Texture" id=14]
[ext_resource path="res://sprite/player/player11.png" type="Texture" id=15]
[ext_resource path="res://sprite/player/player2.png" type="Texture" id=16]
[ext_resource path="res://sprite/player/player3.png" type="Texture" id=17]
[ext_resource path="res://sprite/player/player4.png" type="Texture" id=18]
[ext_resource path="res://sprite/player/player5.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 9.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 9.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "run",
"speed": 9.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "attack",
"speed": 9.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.2399
height = 50.8873

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 55.1688, 36.6439 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 19.9701
height = 52.7913

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="wingAniContainer" type="Node2D" parent="."]
editor/display_folded = true

[node name="wingAni" type="AnimatedSprite" parent="wingAniContainer"]
visible = false
position = Vector2( 0, -39.5166 )
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
offset = Vector2( 7.88, 0 )

[node name="ani" type="AnimatedSprite" parent="."]
position = Vector2( 0, -69 )
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "attack"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -900
limit_top = -3000
limit_right = 8900
limit_bottom = 650
limit_smoothed = true
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="swordDamageContainer" type="Node2D" parent="."]

[node name="swordDamageArea" type="Area2D" parent="swordDamageContainer"]
position = Vector2( -68.4372, -14.6651 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="swordDamageContainer/swordDamageArea"]
position = Vector2( 18.1568, -1.39667 )
shape = SubResource( 4 )

[node name="hitArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitArea"]
position = Vector2( 0, -14 )
shape = SubResource( 5 )
